--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -15,7 +15,7 @@ $h6: 1rem;
 //顏色設置
 $maincolor:#394149;
 $fontcolor:#88929B;
-$bgcolor:#ffffff ;
+$bgcolor:#eff1f3 ;
 $hovercolor:#ffffff;
 
 //深色模式，之後需要會正式啟用
