--- a/css/swiper.css
+++ b/css/swiper.css
@@ -1,4 +1,5 @@
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -22,6 +23,7 @@ figure {
   margin: 0;
   padding: 0;
   -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
 }
@@ -49,6 +51,7 @@ table {
 
 a {
   text-decoration: none;
+  -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
@@ -105,8 +108,14 @@ body {
   font-size: 18px;
   background: #fff;
   /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -130,19 +139,37 @@ body {
   background-color: unset;
   width: 400px;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .swiper-slide .swiper-info-box {
   width: 100%;
   height: 150px;
   margin-bottom: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .swiper-slide .swiper-info-box .info-title-box {
   margin-bottom: 20px;
@@ -172,6 +199,7 @@ body {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  -webkit-transition: 1s;
   transition: 1s;
 }
 .swiper-slide .swiper-img:hover .mask {
@@ -184,9 +212,15 @@ body {
   margin-top: 100px;
   width: 120px;
   height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .next-prev-box .swiper-button-next, .next-prev-box .swiper-button-prev {
   border-radius: 50%;
@@ -194,6 +228,7 @@ body {
   width: 50px;
   height: 50px;
   position: static;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .next-prev-box .swiper-button-next::after, .next-prev-box .swiper-button-prev::after {
@@ -202,11 +237,12 @@ body {
 .next-prev-box .swiper-button-next i, .next-prev-box .swiper-button-prev i {
   font-size: 25px;
   color: var(--maincolor, #394149);
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .next-prev-box .swiper-button-next:hover, .next-prev-box .swiper-button-prev:hover {
   background-color: var(--maincolor, #394149);
 }
 .next-prev-box .swiper-button-next:hover i, .next-prev-box .swiper-button-prev:hover i {
-  color: var(--bgcolor, #ffffff);
+  color: var(--bgcolor, #eff1f3);
 }/*# sourceMappingURL=swiper.css.map */
