--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,6 +8,9 @@
 //rem設置
 html{
   font-size: 16px;
+  @include small-pc{
+    font-size: 15px;
+  }
 }
 
 body{
@@ -68,6 +71,9 @@ main{
     border-bottom: 1px solid var(--maincolor, $maincolor);
     @include flex;
     flex-direction: column;
+    @include bkpt(900px){
+      height:auto
+    }
     .intro-top{
       width: 100%;
       padding-top: 20px;
@@ -89,16 +95,28 @@ main{
       width: 1024px;
       flex: 1;
       @include flex;
+
+      @include small-pc{
+        // width: calc(1024 * var(--p1100));
+        width: unset;
+      }
       .intro-info{
         width: 100%;
         height: auto;
         @include flex(space-between,center);
+        @include bkpt(900px){
+          flex-direction: column;
+        }
         .left-side-area{
           height: 100%;
           min-height: 372px;
           margin-right: 50px;
           @include flex(space-between,flex-start);
           flex-direction: column;
+          @include bkpt(900px){
+            margin-right: unset;
+            margin-top: 50px;
+          }
           .name-area{
             color: var(--maincolor, $maincolor);
             .introTop{
@@ -187,7 +205,17 @@ main{
         }
         .right-side-area{
           flex: 1;
+          @include flex(space-between,flex-start);
+          flex-direction: column;
+          min-height: 372px;
+          @include bkpt(900px){
+            width: 450px;
+            border-top: 1px solid var(--fontcolor, $fontcolor);
+            padding: 50px 0 50px;
+            margin-top: 50px;
+          }
           p{
+            
             font-size: $h6;
             color:var(--fontcolor, $fontcolor);
           }
@@ -234,22 +262,41 @@ main{
     border-top: 1px solid var(--maincolor, $maincolor);
     border-bottom: 1px solid var(--maincolor, $maincolor);
     @include flex;
+    @include bkpt(900px){
+      height: unset;
+    }
     .container{
       width: 1024px;
       height: auto;
       @include flex(flex-start,flex-start);
+      @include bkpt(900px){
+        flex-direction: column;
+      }
       .left-side-area{
         width: 400px;
         min-height: 590px;
         @include flex(space-between,flex-start);
         flex-direction: column;
         margin-right: 70px;
+
+        @include small-pc{
+          margin-right: 45px;
+        }
+        @include bkpt(900px){
+          width: 100%;
+          margin-right: unset;
+          @include flex(flex-start,center);
+        }
         .title-area{
           font-size: $h1;
           font-weight: 700;
           color: var(--maincolor,$maincolor);
           flex: 1;
           line-height: 60px;
+          @include bkpt(900px){
+            flex: unset;
+            padding: 50px 0 ;
+          }
         }
         .photo-area{
           width: 100%;
@@ -265,15 +312,19 @@ main{
         flex-direction: column;
         .personality-area{
           width: 100%;
+          @include bkpt(900px){
+            padding: 25px 0 0;
+          }
           ul{
             list-style: none;
             width: 100%;
             @include flex(flex-start,flex-start);
             flex-wrap: wrap;
             li{
-              width: 50%;
+              width: 55%;
               @include flex(flex-start,center);
               margin-bottom: 15px;
+              padding-right: 15px;
               .fa-solid{
                 color: var(--maincolor,$maincolor);
                 font-size: 15px;
@@ -283,14 +334,23 @@ main{
                 font-size: $h6;
                 color: var(--fontcolor,$fontcolor);
                 font-weight: 500;
+                line-height: calc($h6 + 2px)
+              }
+              &:nth-child(2n){
+                width: 45%;
+                padding-right: 0px;
               }
             }
+
           }
         }
 
         .skills-area{
           width: 100%;
           height: 410px;
+          @include bkpt(900px){
+            padding: 0 0 50px;
+          }
           @include flex(space-between,flex-start);
           flex-direction: column;
           .title{
@@ -361,6 +421,9 @@ footer{
       color: var(--maincolor,$maincolor);
       font-weight: 500;
       margin-left: 30px;
+      @include bkpt(900px){
+        display: none;
+      }
     }
   }
 
